--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,1 +1,79 @@
-site_name: My Docs
+site_name: 'Fedecan'
+site_description: |
+  Static site for fedecan.ca
+
+# copyright: Copyright &copy; PLACEHOLDER
+
+nav:
+  - Home: index.md
+
+theme:
+  name: material
+  language: en
+  icon:
+    logo: fontawesome/brands/canadian-maple-leaf
+  favicon: assets/img/canadian-maple-leaf.svg
+  palette:
+    - media: "(prefers-color-scheme: light)"
+      scheme: default
+      primary: red
+      accent: red
+      toggle:
+        icon: material/weather-sunny
+        name: Switch to dark mode
+    - media: "(prefers-color-scheme: dark)"
+      scheme: slate
+      primary: black
+      accent: red
+      toggle:
+        icon: material/weather-night
+        name: Switch to light mode
+  features:
+    - navigation.instant
+    - navigation.instant.progress
+    - navigation.tabs
+    - navigation.sections
+    - navigation.indexes
+    - search.suggest
+    - search.highlight
+    - content.code.copy
+    - content.code.select
+
+
+markdown_extensions:
+  - admonition
+  - attr_list
+  - md_in_html
+  - pymdownx.details
+  - pymdownx.highlight:
+      anchor_linenums: true
+      line_spans: __span
+      pygments_lang_class: true
+  - pymdownx.inlinehilite
+  - pymdownx.snippets
+  - pymdownx.superfences
+  - pymdownx.tabbed:
+      alternate_style: true
+  - sane_lists
+  - pymdownx.emoji:
+      emoji_index: !!python/name:material.extensions.emoji.twemoji
+      emoji_generator: !!python/name:material.extensions.emoji.to_svg
+
+plugins:
+  - glightbox
+  # - privacy
+  - search
+  - blog:
+      blog_dir: announcements
+      archive: false
+      categories: false
+      authors: false
+      pagination_per_page: 5
+  # - social: 
+  #     cards_layout_options:
+  #       font_family: Noto Sans
+  #     enabled: !ENV [CI, false]
+
+
+extra:
+  generator: false
