fix site description field

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,6 +1,6 @@
-site_name: 'Fedecan │ Fédécan'
+site_name: 'Fedecan | Fédécan'
 site_description: |
-  Static site for fedecan.ca
+  Dedicated to providing safe and inclusive platforms, we enable Canadians to participate in online communities through federated software.
 
 # copyright: Copyright &copy; PLACEHOLDER
 
