--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "devDependencies": {
     "@iconify/vue": "^4.1.2",
+    "@types/node": "^20.14.11",
     "vitepress": "^1.2.3"
   },
   "scripts": {
