separate french & english section blog support

--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,4 +1,4 @@
 # These are supported funding model platforms
 
 github: [fedecan-ca]
-custom: ["https://fedecan.ca/donate"]
+custom: ["https://fedecan.ca/en/donate"]
