--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "type": "module",
   "devDependencies": {
     "@iconify/vue": "^4.3.0",
-    "@types/node": "^20.17.19",
+    "@types/node": "^20.19.0",
     "vitepress": "^1.6.3"
   },
   "scripts": {
@@ -18,6 +18,9 @@
     "@lunariajs/core": "^0.1.1"
   },
   "pnpm": {
-    "overrides": {}
+    "overrides": {},
+    "onlyBuiltDependencies": [
+      "esbuild"
+    ]
   }
 }
